chore: saving multiple reservation (canceled or not) added